# cppdetector

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md  main.cpp
catch_benchmarks/: CMakeLists.txt  main.cpp
detector_core/: CMakeLists.txt  detector_core.cmake  detector_global.h
detector_core/common/: codeconversion.cpp  codeconversion.h  common.cmake  filehelp.cpp  filehelp.h  filepath.cpp  filepath.h  filepathhelper.h  ifile.h  ipath.h  maphelp.cpp  maphelp.h  pathHelper.h  reflecter.h  stringhelper.cpp  stringhelper.h
detector_core/detectorcommon/: bracehelper.cpp  bracehelper.h  classdefinition.cpp  classdefinition.h  codefilter.cpp  codefilter.h  cpppath.cpp  cpppath.h  detectorcommon.cmake  detectorcommon.cpp  detectorcommon.h  detectorhelp.cpp  detectorhelp.h  fordefinition.cpp  fordefinition.h  functiondefinition.cpp  functiondefinition.h  ifdefinition.cpp  ifdefinition.h  jsonparsehelper.h  msgrestorer.cpp  msgrestorer.h  variabledefinition.cpp  variabledefinition.h
detector_core/detectorcontext/: detectorcontext.cmake  detectorcontext.cpp  detectorcontext.h  detectorcontextcore.cpp  detectorcontextcore.h  multiprocessdetectorcontext.cpp  multiprocessdetectorcontext.h  multithreaddetectorcontext.cpp  multithreaddetectorcontext.h  singlethreaddetectorcontext.cpp  singlethreaddetectorcontext.h
detector_core/detectors/: detector.h  detectors.cmake  idetector.h  rule.h
detector_core/detectors/accesscontrol/: accesscontrol.cmake  accesscontroldetector.h  accesscontrolrule_membervariable.cpp  accesscontrolrule_membervariable.h
detector_core/detectors/array/: array.cmake  arraydetector.h  arrayrule_bufferoverflow.cpp  arrayrule_bufferoverflow.h  arrayrule_indexcheckdefectively.cpp  arrayrule_indexcheckdefectively.h  arrayrule_indexoutofbounds.cpp  arrayrule_indexoutofbounds.h  arrayrule_indexoutofboundsfromfunc.cpp  arrayrule_indexoutofboundsfromfunc.h  arrayrule_indexoutofboundsinloop.cpp  arrayrule_indexoutofboundsinloop.h  arrayrule_indexusedbeforecheck.cpp  arrayrule_indexusedbeforecheck.h  arrayrule_memsetzerobyte.cpp  arrayrule_memsetzerobyte.h  arrayrulehelper.cpp  arrayrulehelper.h
detector_core/detectors/class/: class.cmake  classdetector.h  classrule_pairofconstructorandassignment.cpp  classrule_pairofconstructorandassignment.h
detector_core/detectors/confused/: confused.cmake  confuseddetector.h  confusedrule_assignmentinassertorif.cpp  confusedrule_assignmentinassertorif.h  confusedrule_break.cpp  confusedrule_break.h  confusedrule_casewithoutbreak.cpp  confusedrule_casewithoutbreak.h  confusedrule_conditionrepeat.cpp  confusedrule_conditionrepeat.h  confusedrule_constructor.cpp  confusedrule_constructor.h  confusedrule_diffvariablewithinitandcondition.cpp  confusedrule_diffvariablewithinitandcondition.h  confusedrule_nothandlefuncreturn.cpp  confusedrule_nothandlefuncreturn.h  confusedrule_priority.cpp  confusedrule_priority.h  confusedrule_prioritywithassignmentandcompare.cpp  confusedrule_prioritywithassignmentandcompare.h  confusedrule_returnbool.cpp  confusedrule_returnbool.h  confusedrule_semicolon.cpp  confusedrule_semicolon.h  confusedrule_statementOutsideOfcase.cpp  confusedrule_statementOutsideOfcase.h  confusedrule_switchwihtoutdefault.cpp  confusedrule_switchwihtoutdefault.h
detector_core/detectors/dynamic/: dynamic.cmake  dynamicdetector.h  dynamicrule_inline.cpp  dynamicrule_inline.h  dynamicrule_localstatic.cpp  dynamicrule_localstatic.h  dynamicrulehelper.cpp  dynamicrulehelper.h
detector_core/detectors/inline/: inline.cmake  inlinedetector.h  inlinerule_complexfunction.cpp  inlinerule_complexfunction.h  inlinerule_recursion.cpp  inlinerule_recursion.h  inlinerule_specialclassmethod.cpp  inlinerule_specialclassmethod.h  inlinerule_tenlines.cpp  inlinerule_tenlines.h
detector_core/detectors/iterator/: iterator.cmake  iteratordetector.h  iteratorrule_invaliddereference.cpp  iteratorrule_invaliddereference.h  iteratorrule_outofbound.cpp  iteratorrule_outofbound.h
detector_core/detectors/lambda/: lambda.cmake  lambdadetector.h  lambdarule_catchbyreference.cpp  lambdarule_catchbyreference.h
detector_core/detectors/logic/: logic.cmake  logicdetector.h  logicrule_assignself.cpp  logicrule_assignself.h  logicrule_basevalue.cpp  logicrule_basevalue.h  logicrule_expressionrepetition.cpp  logicrule_expressionrepetition.h  logicrule_incorrectoperation.cpp  logicrule_incorrectoperation.h  logicrule_stringfind.cpp  logicrule_stringfind.h
detector_core/detectors/loop/: loop.cmake  loopdetector.h  looprule_helper.cpp  looprule_helper.h  looprule_outofbounds.cpp  looprule_outofbounds.h  looprule_suggestauto.cpp  looprule_suggestauto.h  looprule_wrongstepdirection.cpp  looprule_wrongstepdirection.h  looprule_wrongvariable.cpp  looprule_wrongvariable.h
detector_core/detectors/memleak/: memleak.cmake  memleakdetector.h  memleakrule_destructor.cpp  memleakrule_destructor.h  memleakrule_filehandle.cpp  memleakrule_filehandle.h  (+6 more)
(+241 files in other folders)
